fixed some design issues

--- a/Festival-App/Festival-App/Base.lproj/Main.storyboard
+++ b/Festival-App/Festival-App/Base.lproj/Main.storyboard
@@ -112,7 +112,7 @@
                                                     <subviews>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JsY-MF-cIZ" customClass="RoundedButton" customModule="Festival_App" customModuleProvider="target">
                                                             <rect key="frame" x="113" y="53" width="80" height="30"/>
-                                                            <color key="backgroundColor" red="0.23921568627450979" green="0.086274509803921567" blue="0.40784313725490196" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <color key="backgroundColor" red="0.2208932638168335" green="0.10334489494562149" blue="0.35445976257324219" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="30" id="Cnw-A4-MF8"/>
                                                                 <constraint firstAttribute="width" constant="80" id="PWm-ap-A28"/>
@@ -300,7 +300,7 @@
                                                     <subviews>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0cU-Q6-CgP" customClass="RoundedButton" customModule="Festival_App" customModuleProvider="target">
                                                             <rect key="frame" x="113" y="53" width="80" height="30"/>
-                                                            <color key="backgroundColor" red="0.23921568630000001" green="0.086274509799999996" blue="0.40784313729999999" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <color key="backgroundColor" red="0.21986734920000001" green="0.1044119681" blue="0.35130041560000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="30" id="OEA-M5-7fO"/>
                                                                 <constraint firstAttribute="width" constant="80" id="n7i-mK-RfT"/>
@@ -376,7 +376,7 @@
                                         <color key="value" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="color" keyPath="bottomColor">
-                                        <color key="value" red="0.00046930917709999998" green="0.15181804660000001" blue="0.2134067358" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="value" red="0.0002439394299573061" green="0.14955068010051809" blue="0.072790622978560482" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="number" keyPath="endY">
                                         <real key="value" value="0.0"/>
@@ -488,7 +488,7 @@
                                                     <subviews>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ecn-4x-gUe" customClass="RoundedButton" customModule="Festival_App" customModuleProvider="target">
                                                             <rect key="frame" x="113" y="53" width="80" height="30"/>
-                                                            <color key="backgroundColor" red="0.23921568630000001" green="0.086274509799999996" blue="0.40784313729999999" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <color key="backgroundColor" red="0.21986734920000001" green="0.1044119681" blue="0.35130041560000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="80" id="UL7-TB-LsE"/>
                                                                 <constraint firstAttribute="height" constant="30" id="dDD-MS-aYK"/>
@@ -564,7 +564,7 @@
                                         <color key="value" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="color" keyPath="bottomColor">
-                                        <color key="value" red="0.00046930917709999998" green="0.15181804660000001" blue="0.2134067358" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="value" red="0.17719802466010359" green="0.1657435314595867" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="number" keyPath="endY">
                                         <real key="value" value="0.0"/>
@@ -675,7 +675,7 @@
                                                     <subviews>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Y6-zq-eVd" customClass="RoundedButton" customModule="Festival_App" customModuleProvider="target">
                                                             <rect key="frame" x="113" y="53" width="80" height="30"/>
-                                                            <color key="backgroundColor" red="0.23921568630000001" green="0.086274509799999996" blue="0.40784313729999999" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <color key="backgroundColor" red="0.21986734920000001" green="0.1044119681" blue="0.35130041560000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="80" id="nrM-xr-tcn"/>
                                                                 <constraint firstAttribute="height" constant="30" id="r8L-gi-oaS"/>
@@ -751,7 +751,7 @@
                                         <color key="value" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="color" keyPath="bottomColor">
-                                        <color key="value" red="0.00046930917709999998" green="0.15181804660000001" blue="0.2134067358" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="value" red="0.15333549227668397" green="0.0" blue="0.057005548881981942" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="number" keyPath="endY">
                                         <real key="value" value="0.0"/>
